# compose-safebox

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yml
src/compose_safebox/: __init__.py  cli.py  core.py
tests/: test_core.py
